--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>This is my awesome site!</h1>
+  <h1>HELP FROKI GET A BENGALCAT</h1>
   <img src="images/kittens.jpg">
+  <p>hej sverige</p>
 </body>
 </html>
