--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Hej</title>
+  <title>CAT DONATION DRIVE 2013</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
